Update WASAPISharedBackend: implement lazy initialization in backend methods when not yet initialized